src/output.css
/*! tailwindcss v4.2.1 | MIT License | https://tailwindcss.com */
@layer properties;
@layer theme, base, components, utilities;
@layer theme {
  :root, :host {
    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
    --color-purple-600: oklch(55.8% 0.288 302.321);
    --color-purple-800: oklch(43.8% 0.218 303.724);
    --color-white: #fff;
    --spacing: 0.25rem;
    --text-2xl: 1.5rem;
    --text-2xl--line-height: calc(2 / 1.5);
    --text-3xl: 1.875rem;
    --text-3xl--line-height: calc(2.25 / 1.875);
    --font-weight-bold: 700;
    --radius-2xl: 1rem;
    --radius-4xl: 2rem;
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
  }
}
@layer base {
  *, ::after, ::before, ::backdrop, ::file-selector-button {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 0 solid;
  }
  html, :host {
    line-height: 1.5;
    -webkit-text-size-adjust: 100%;
    tab-size: 4;
    font-family: var(--default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
    font-feature-settings: var(--default-font-feature-settings, normal);
    font-variation-settings: var(--default-font-variation-settings, normal);
    -webkit-tap-highlight-color: transparent;
  }
  hr {
    height: 0;
    color: inherit;
    border-top-width: 1px;
  }
  abbr:where([title]) {
    -webkit-text-decoration: underline dotted;
    text-decoration: underline dotted;
  }
  h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: inherit;
  }
  a {
    color: inherit;
    -webkit-text-decoration: inherit;
    text-decoration: inherit;
  }
  b, strong {
    font-weight: bolder;
  }
  code, kbd, samp, pre {
    font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
    font-feature-settings: var(--default-mono-font-feature-settings, normal);
    font-variation-settings: var(--default-mono-font-variation-settings, normal);
    font-size: 1em;
  }
  small {
    font-size: 80%;
  }
  sub, sup {
    font-size: 75%;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
  }
  sub {
    bottom: -0.25em;
  }
  sup {
    top: -0.5em;
  }
  table {
    text-indent: 0;
    border-color: inherit;
    border-collapse: collapse;
  }
  :-moz-focusring {
    outline: auto;
  }
  progress {
    vertical-align: baseline;
  }
  summary {
    display: list-item;
  }
  ol, ul, menu {
    list-style: none;
  }
  img, svg, video, canvas, audio, iframe, embed, object {
    display: block;
    vertical-align: middle;
  }
  img, video {
    max-width: 100%;
    height: auto;
  }
  button, input, select, optgroup, textarea, ::file-selector-button {
    font: inherit;
    font-feature-settings: inherit;
    font-variation-settings: inherit;
    letter-spacing: inherit;
    color: inherit;
    border-radius: 0;
    background-color: transparent;
    opacity: 1;
  }
  :where(select:is([multiple], [size])) optgroup {
    font-weight: bolder;
  }
  :where(select:is([multiple], [size])) optgroup option {
    padding-inline-start: 20px;
  }
  ::file-selector-button {
    margin-inline-end: 4px;
  }
  ::placeholder {
    opacity: 1;
  }
  @supports (not (-webkit-appearance: -apple-pay-button))  or (contain-intrinsic-size: 1px) {
    ::placeholder {
      color: currentcolor;
      @supports (color: color-mix(in lab, red, red)) {
        color: color-mix(in oklab, currentcolor 50%, transparent);
      }
    }
  }
  textarea {
    resize: vertical;
  }
  ::-webkit-search-decoration {
    -webkit-appearance: none;
  }
  ::-webkit-date-and-time-value {
    min-height: 1lh;
    text-align: inherit;
  }
  ::-webkit-datetime-edit {
    display: inline-flex;
  }
  ::-webkit-datetime-edit-fields-wrapper {
    padding: 0;
  }
  ::-webkit-datetime-edit, ::-webkit-datetime-edit-year-field, ::-webkit-datetime-edit-month-field, ::-webkit-datetime-edit-day-field, ::-webkit-datetime-edit-hour-field, ::-webkit-datetime-edit-minute-field, ::-webkit-datetime-edit-second-field, ::-webkit-datetime-edit-millisecond-field, ::-webkit-datetime-edit-meridiem-field {
    padding-block: 0;
  }
  ::-webkit-calendar-picker-indicator {
    line-height: 1;
  }
  :-moz-ui-invalid {
    box-shadow: none;
  }
  button, input:where([type="button"], [type="reset"], [type="submit"]), ::file-selector-button {
    appearance: button;
  }
  ::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
    height: auto;
  }
  [hidden]:where(:not([hidden="until-found"])) {
    display: none !important;
  }
}
@layer utilities {
  .m-5 {
    margin: calc(var(--spacing) * 5);
  }
  .m-auto {
    margin: auto;
  }
  .mx-auto {
    margin-inline: auto;
  }
  .my-20 {
    margin-block: calc(var(--spacing) * 20);
  }
  .my-30 {
    margin-block: calc(var(--spacing) * 30);
  }
  .my-35 {
    margin-block: calc(var(--spacing) * 35);
  }
  .my-50 {
    margin-block: calc(var(--spacing) * 50);
  }
  .my-80 {
    margin-block: calc(var(--spacing) * 80);
  }
  .mt-75 {
    margin-top: calc(var(--spacing) * 75);
  }
  .grid {
    display: grid;
  }
  .table {
    display: table;
  }
  .h-100 {
    height: calc(var(--spacing) * 100);
  }
  .h-125 {
    height: calc(var(--spacing) * 125);
  }
  .h-135 {
    height: calc(var(--spacing) * 135);
  }
  .h-145 {
    height: calc(var(--spacing) * 145);
  }
  .h-150 {
    height: calc(var(--spacing) * 150);
  }
  .h-155 {
    height: calc(var(--spacing) * 155);
  }
  .h-160 {
    height: calc(var(--spacing) * 160);
  }
  .w-10 {
    width: calc(var(--spacing) * 10);
  }
  .w-20 {
    width: calc(var(--spacing) * 20);
  }
  .w-25 {
    width: calc(var(--spacing) * 25);
  }
  .w-50 {
    width: calc(var(--spacing) * 50);
  }
  .w-55 {
    width: calc(var(--spacing) * 55);
  }
  .w-60 {
    width: calc(var(--spacing) * 60);
  }
  .w-70 {
    width: calc(var(--spacing) * 70);
  }
  .w-100 {
    width: calc(var(--spacing) * 100);
  }
  .w-150 {
    width: calc(var(--spacing) * 150);
  }
  .w-200 {
    width: calc(var(--spacing) * 200);
  }
  .w-250 {
    width: calc(var(--spacing) * 250);
  }
  .w-260 {
    width: calc(var(--spacing) * 260);
  }
  .w-270 {
    width: calc(var(--spacing) * 270);
  }
  .w-300 {
    width: calc(var(--spacing) * 300);
  }
  .w-350 {
    width: calc(var(--spacing) * 350);
  }
  .w-500 {
    width: calc(var(--spacing) * 500);
  }
  .border-collapse {
    border-collapse: collapse;
  }
  .resize {
    resize: both;
  }
  .justify-center {
    justify-content: center;
  }
  .rounded-2xl {
    border-radius: var(--radius-2xl);
  }
  .rounded-4xl {
    border-radius: var(--radius-4xl);
  }
  .rounded-full {
    border-radius: calc(infinity * 1px);
  }
  .border {
    border-style: var(--tw-border-style);
    border-width: 1px;
  }
  .border-2 {
    border-style: var(--tw-border-style);
    border-width: 2px;
  }
  .p-2 {
    padding: calc(var(--spacing) * 2);
  }
  .p-3 {
    padding: calc(var(--spacing) * 3);
  }
  .p-5 {
    padding: calc(var(--spacing) * 5);
  }
  .p-8 {
    padding: calc(var(--spacing) * 8);
  }
  .p-10 {
    padding: calc(var(--spacing) * 10);
  }
  .text-center {
    text-align: center;
  }
  .text-2xl {
    font-size: var(--text-2xl);
    line-height: var(--tw-leading, var(--text-2xl--line-height));
  }
  .text-3xl {
    font-size: var(--text-3xl);
    line-height: var(--tw-leading, var(--text-3xl--line-height));
  }
  .font-bold {
    --tw-font-weight: var(--font-weight-bold);
    font-weight: var(--font-weight-bold);
  }
  .text-white {
    color: var(--color-white);
  }
  .underline {
    text-decoration-line: underline;
  }
  .outline {
    outline-style: var(--tw-outline-style);
    outline-width: 1px;
  }
  .sm\:w-75 {
    @media (width >= 40rem) {
      width: calc(var(--spacing) * 75);
    }
  }
  .sm\:w-150 {
    @media (width >= 40rem) {
      width: calc(var(--spacing) * 150);
    }
  }
  .md\:my-15 {
    @media (width >= 48rem) {
      margin-block: calc(var(--spacing) * 15);
    }
  }
  .md\:my-20 {
    @media (width >= 48rem) {
      margin-block: calc(var(--spacing) * 20);
    }
  }
  .md\:mt-60 {
    @media (width >= 48rem) {
      margin-top: calc(var(--spacing) * 60);
    }
  }
  .md\:mt-80 {
    @media (width >= 48rem) {
      margin-top: calc(var(--spacing) * 80);
    }
  }
  .md\:mt-90 {
    @media (width >= 48rem) {
      margin-top: calc(var(--spacing) * 90);
    }
  }
  .md\:h-10 {
    @media (width >= 48rem) {
      height: calc(var(--spacing) * 10);
    }
  }
  .md\:h-100 {
    @media (width >= 48rem) {
      height: calc(var(--spacing) * 100);
    }
  }
  .md\:h-120 {
    @media (width >= 48rem) {
      height: calc(var(--spacing) * 120);
    }
  }
  .md\:w-10 {
    @media (width >= 48rem) {
      width: calc(var(--spacing) * 10);
    }
  }
  .md\:w-150 {
    @media (width >= 48rem) {
      width: calc(var(--spacing) * 150);
    }
  }
  .md\:w-160 {
    @media (width >= 48rem) {
      width: calc(var(--spacing) * 160);
    }
  }
  .md\:w-180 {
    @media (width >= 48rem) {
      width: calc(var(--spacing) * 180);
    }
  }
  .md\:w-250 {
    @media (width >= 48rem) {
      width: calc(var(--spacing) * 250);
    }
  }
  .md\:w-350 {
    @media (width >= 48rem) {
      width: calc(var(--spacing) * 350);
    }
  }
  .lg\:mt-30 {
    @media (width >= 64rem) {
      margin-top: calc(var(--spacing) * 30);
    }
  }
  .lg\:mt-50 {
    @media (width >= 64rem) {
      margin-top: calc(var(--spacing) * 50);
    }
  }
  .lg\:mt-100 {
    @media (width >= 64rem) {
      margin-top: calc(var(--spacing) * 100);
    }
  }
  .lg\:mt-120 {
    @media (width >= 64rem) {
      margin-top: calc(var(--spacing) * 120);
    }
  }
}
body {
  background-color: rgb(176, 137, 211);
}
.icon {
  text-align: center;
  border: 4px solid;
}
.footer {
  position: fixed;
  bottom: 0;
  text-align: center;
  width: 100%;
  background-color: rgb(137, 99, 171);
}
#profile {
  background-color: rgb(147, 51, 234);
}
@property --tw-border-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@property --tw-font-weight {
  syntax: "*";
  inherits: false;
}
@property --tw-outline-style {
  syntax: "*";
  inherits: false;
  initial-value: solid;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-border-style: solid;
      --tw-font-weight: initial;
      --tw-outline-style: solid;
    }
  }
}

